--- a/DiYa/DiYa/Class/Home/View/GoodsItem.xib
+++ b/DiYa/DiYa/Class/Home/View/GoodsItem.xib
@@ -16,46 +16,47 @@
             <rect key="frame" x="0.0" y="0.0" width="189" height="158"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RTH-hn-t5m">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_home_logo" translatesAutoresizingMaskIntoConstraints="NO" id="RTH-hn-t5m">
                     <rect key="frame" x="51" y="0.0" width="88" height="88"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="88" id="ZXe-dT-i5C"/>
                         <constraint firstAttribute="height" constant="88" id="jg5-X1-zei"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4v3-PC-GBC" userLabel="商品标题">
-                    <rect key="frame" x="0.0" y="88" width="189" height="41.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4v3-PC-GBC" userLabel="商品标题">
+                    <rect key="frame" x="10" y="88" width="169" height="55"/>
                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" red="0.26666666666666666" green="0.26666666666666666" blue="0.26666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NAx-ke-1dr" userLabel="折扣价">
-                    <rect key="frame" x="56" y="129.5" width="28.5" height="13.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NAx-ke-1dr" userLabel="折扣价">
+                    <rect key="frame" x="15" y="143" width="76.5" height="0.0"/>
                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" red="0.85490196078431369" green="0.1764705882352941" blue="0.15294117647058825" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jdH-IR-GeC" userLabel="市场价">
-                    <rect key="frame" x="104.5" y="129.5" width="24" height="13.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jdH-IR-GeC" userLabel="市场价">
+                    <rect key="frame" x="97.5" y="143" width="76.5" height="0.0"/>
                     <fontDescription key="fontDescription" type="system" pointSize="9"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="NAx-ke-1dr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="0qk-Ph-2ma" secondAttribute="leading" constant="15" id="3pe-bT-9Sn"/>
+                <constraint firstItem="NAx-ke-1dr" firstAttribute="leading" secondItem="0qk-Ph-2ma" secondAttribute="leading" constant="15" id="3pe-bT-9Sn"/>
                 <constraint firstItem="NAx-ke-1dr" firstAttribute="top" secondItem="4v3-PC-GBC" secondAttribute="bottom" id="A8R-64-9Se"/>
-                <constraint firstItem="NAx-ke-1dr" firstAttribute="trailing" secondItem="0qk-Ph-2ma" secondAttribute="centerX" constant="-10" id="AGN-qE-xZM"/>
+                <constraint firstItem="NAx-ke-1dr" firstAttribute="trailing" secondItem="0qk-Ph-2ma" secondAttribute="centerX" constant="-3" id="AGN-qE-xZM"/>
                 <constraint firstItem="RTH-hn-t5m" firstAttribute="centerX" secondItem="0qk-Ph-2ma" secondAttribute="centerX" id="GWi-hf-zHq"/>
-                <constraint firstItem="4v3-PC-GBC" firstAttribute="leading" secondItem="0qk-Ph-2ma" secondAttribute="leading" id="JxS-Q8-Llh"/>
+                <constraint firstItem="4v3-PC-GBC" firstAttribute="leading" secondItem="0qk-Ph-2ma" secondAttribute="leading" constant="10" id="JxS-Q8-Llh"/>
+                <constraint firstAttribute="trailing" secondItem="jdH-IR-GeC" secondAttribute="trailing" constant="15" id="LFZ-7S-9fX"/>
                 <constraint firstAttribute="bottom" secondItem="NAx-ke-1dr" secondAttribute="bottom" constant="15" id="MFY-Xn-p4C"/>
                 <constraint firstAttribute="bottom" secondItem="jdH-IR-GeC" secondAttribute="bottom" constant="15" id="O9i-Nk-mU0"/>
                 <constraint firstItem="jdH-IR-GeC" firstAttribute="centerY" secondItem="NAx-ke-1dr" secondAttribute="centerY" id="Og7-QA-pEX"/>
                 <constraint firstItem="jdH-IR-GeC" firstAttribute="top" secondItem="4v3-PC-GBC" secondAttribute="bottom" id="V50-7m-8kG"/>
-                <constraint firstItem="jdH-IR-GeC" firstAttribute="leading" secondItem="NAx-ke-1dr" secondAttribute="trailing" constant="20" id="bSa-ny-uY1"/>
+                <constraint firstItem="jdH-IR-GeC" firstAttribute="leading" secondItem="NAx-ke-1dr" secondAttribute="trailing" constant="6" id="bSa-ny-uY1"/>
                 <constraint firstItem="4v3-PC-GBC" firstAttribute="top" secondItem="RTH-hn-t5m" secondAttribute="bottom" id="hF3-c5-juB"/>
-                <constraint firstAttribute="trailing" secondItem="4v3-PC-GBC" secondAttribute="trailing" id="jsH-nC-abm"/>
+                <constraint firstAttribute="trailing" secondItem="4v3-PC-GBC" secondAttribute="trailing" constant="10" id="jsH-nC-abm"/>
                 <constraint firstItem="RTH-hn-t5m" firstAttribute="top" secondItem="0qk-Ph-2ma" secondAttribute="top" id="nI5-nD-l4K"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -70,4 +71,7 @@
             <point key="canvasLocation" x="-120.5" y="-168"/>
         </view>
     </objects>
+    <resources>
+        <image name="ic_home_logo" width="18" height="25"/>
+    </resources>
 </document>
