--- a/DiYa/DiYa/Class/Mine/Controller/YYFavoriteViewController.xib
+++ b/DiYa/DiYa/Class/Mine/Controller/YYFavoriteViewController.xib
@@ -11,6 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YYFavoriteViewController" customModule="DiYa" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="DVB-8H-4y1" id="gg7-8d-zTZ"/>
+                <outlet property="layout" destination="wsp-3A-Jhh" id="fM2-qs-UH8"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,7 +20,29 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="DVB-8H-4y1">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" red="0.96862745098039216" green="0.96470588235294119" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wsp-3A-Jhh">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="5" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="q5s-bb-0QM"/>
+                        <outlet property="delegate" destination="-1" id="QkP-6r-oD0"/>
+                    </connections>
+                </collectionView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="DVB-8H-4y1" secondAttribute="trailing" id="5Fd-Uh-nfn"/>
+                <constraint firstItem="DVB-8H-4y1" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="8Fc-Fp-9qp"/>
+                <constraint firstItem="DVB-8H-4y1" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="qa0-yk-ai5"/>
+                <constraint firstAttribute="bottom" secondItem="DVB-8H-4y1" secondAttribute="bottom" id="vAJ-k4-85e"/>
+            </constraints>
         </view>
     </objects>
 </document>
