--- a/DiYa/DiYa/Class/Class/Controller/YYClassListViewController.xib
+++ b/DiYa/DiYa/Class/Class/Controller/YYClassListViewController.xib
@@ -11,6 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YYClassListViewController" customModule="DiYa" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="bS0-tN-4xy" id="7xf-vO-pUN"/>
+                <outlet property="layout" destination="xx7-pX-ZwV" id="HLe-r0-adi"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,7 +20,29 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bS0-tN-4xy">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" red="0.96862745098039216" green="0.96470588235294119" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xx7-pX-ZwV">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="RFH-Di-C3T"/>
+                        <outlet property="delegate" destination="-1" id="FWL-H3-RW5"/>
+                    </connections>
+                </collectionView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="bS0-tN-4xy" secondAttribute="trailing" id="9IJ-Qm-OsC"/>
+                <constraint firstItem="bS0-tN-4xy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="WD5-p8-eXD"/>
+                <constraint firstAttribute="bottom" secondItem="bS0-tN-4xy" secondAttribute="bottom" id="dcK-Ph-CWK"/>
+                <constraint firstItem="bS0-tN-4xy" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="wxg-Qu-VAe"/>
+            </constraints>
         </view>
     </objects>
 </document>
