--- a/DiYa/DiYa/Class/Class/View/YYAllClassView.xib
+++ b/DiYa/DiYa/Class/Class/View/YYAllClassView.xib
@@ -19,11 +19,15 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="335"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ccZ-Np-lmp">
-                        <size key="itemSize" width="50" height="50"/>
+                        <size key="itemSize" width="70" height="25"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="vft-D1-qA4" id="abV-DB-33T"/>
+                        <outlet property="delegate" destination="vft-D1-qA4" id="A5l-Uv-N0e"/>
+                    </connections>
                 </collectionView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -36,8 +40,9 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="collectionView" destination="9RC-to-OaQ" id="vwo-62-sHq"/>
+                <outlet property="layout" destination="ccZ-Np-lmp" id="v2n-PJ-Qrx"/>
             </connections>
-            <point key="canvasLocation" x="38.5" y="-78.5"/>
+            <point key="canvasLocation" x="-258" y="-332"/>
         </view>
     </objects>
 </document>
