--- a/DiYa/DiYa/Class/Home/Controller/YYGoodsDetailController.xib
+++ b/DiYa/DiYa/Class/Home/Controller/YYGoodsDetailController.xib
@@ -15,6 +15,9 @@
             <connections>
                 <outlet property="addShopCartButton" destination="J5I-4L-CgL" id="b3G-G6-Hds"/>
                 <outlet property="buyButton" destination="CX9-Yr-Siz" id="FDA-xM-Ria"/>
+                <outlet property="categoryView" destination="sae-Mm-CBD" id="c8E-kj-jhn"/>
+                <outlet property="goodsInfoView" destination="BLr-4P-lVq" id="C2a-D3-nLr"/>
+                <outlet property="skuCategoryViewHeight" destination="9ju-u2-sow" id="TAW-3r-2pi"/>
                 <outlet property="soldButton" destination="kC1-1o-1TI" id="U7n-kN-H4e"/>
                 <outlet property="topView" destination="nKJ-tm-57T" id="SkP-R0-3zG"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -35,41 +38,41 @@
                                 <constraint firstAttribute="width" constant="375" id="bxv-eV-sgv"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BLr-4P-lVq">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BLr-4P-lVq" customClass="YYGoodsInfoView" customModule="DiYa" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="314" width="375" height="125"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="泰国进口VFOODS MIX脆脆条30g" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mUn-3m-wyT">
-                                    <rect key="frame" x="15" y="15" width="345" height="17"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mUn-3m-wyT">
+                                    <rect key="frame" x="15" y="15" width="345" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥2.05" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5go-wb-mRu">
-                                    <rect key="frame" x="15" y="47" width="50" height="23"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5go-wb-mRu">
+                                    <rect key="frame" x="15" y="30" width="0.0" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                     <color key="textColor" red="0.76078431372549016" green="0.0" blue="0.10196078431372549" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥3.5" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDt-tN-Jb8">
-                                    <rect key="frame" x="75" y="58" width="22" height="12"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDt-tN-Jb8">
+                                    <rect key="frame" x="25" y="30" width="0.0" height="0.0"/>
                                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="10"/>
                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已售出100件" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qGm-Qf-8NQ">
-                                    <rect key="frame" x="293" y="56" width="67" height="14"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qGm-Qf-8NQ">
+                                    <rect key="frame" x="360" y="30" width="0.0" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="11.5"/>
                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12点前下单，当日送达；12点以后下单，次日送达" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMi-Vf-Z3v">
-                                    <rect key="frame" x="15" y="87" width="260" height="14"/>
+                                    <rect key="frame" x="15" y="47" width="260" height="14"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="11.5"/>
                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100条评价" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gvb-gU-JZX">
-                                    <rect key="frame" x="304.5" y="32" width="55.5" height="14"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gvb-gU-JZX">
+                                    <rect key="frame" x="360" y="25" width="0.0" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="11.5"/>
                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -90,7 +93,7 @@
                                 <constraint firstAttribute="bottom" secondItem="qSR-mW-Adu" secondAttribute="bottom" id="FKW-AN-Vaw"/>
                                 <constraint firstItem="5go-wb-mRu" firstAttribute="top" secondItem="mUn-3m-wyT" secondAttribute="bottom" constant="15" id="NZX-OV-PyU"/>
                                 <constraint firstAttribute="trailing" secondItem="qGm-Qf-8NQ" secondAttribute="trailing" constant="15" id="NiI-kE-Czi"/>
-                                <constraint firstItem="qGm-Qf-8NQ" firstAttribute="top" secondItem="gvb-gU-JZX" secondAttribute="bottom" constant="10" id="WuV-79-WlI"/>
+                                <constraint firstItem="qGm-Qf-8NQ" firstAttribute="top" secondItem="gvb-gU-JZX" secondAttribute="bottom" constant="5" id="WuV-79-WlI"/>
                                 <constraint firstAttribute="height" constant="125" id="eKR-LE-GuG"/>
                                 <constraint firstItem="mUn-3m-wyT" firstAttribute="top" secondItem="BLr-4P-lVq" secondAttribute="top" constant="15" id="lxr-1I-FNY"/>
                                 <constraint firstItem="qSR-mW-Adu" firstAttribute="leading" secondItem="BLr-4P-lVq" secondAttribute="leading" id="mpN-aT-NqO"/>
@@ -102,8 +105,15 @@
                                 <constraint firstItem="MDt-tN-Jb8" firstAttribute="leading" secondItem="5go-wb-mRu" secondAttribute="trailing" constant="10" id="sHw-zF-98V"/>
                                 <constraint firstAttribute="trailing" secondItem="qSR-mW-Adu" secondAttribute="trailing" id="yde-Pi-TcA"/>
                             </constraints>
+                            <connections>
+                                <outlet property="commentsLabel" destination="gvb-gU-JZX" id="q1S-Ui-Z3P"/>
+                                <outlet property="marketPriceLabel" destination="MDt-tN-Jb8" id="hYq-6s-Nrh"/>
+                                <outlet property="priceLabel" destination="5go-wb-mRu" id="cWp-JO-8jo"/>
+                                <outlet property="salesLabel" destination="qGm-Qf-8NQ" id="MJ3-sU-MKy"/>
+                                <outlet property="titleLabel" destination="mUn-3m-wyT" id="ZCT-Tc-eND"/>
+                            </connections>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sae-Mm-CBD">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sae-Mm-CBD" customClass="YYGoodsCategoryView" customModule="DiYa" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="439" width="375" height="80"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Qx-NJ-mhz">
@@ -123,39 +133,11 @@
                                         <constraint firstAttribute="height" constant="44" id="qLe-j1-9rN"/>
                                     </constraints>
                                 </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VK1-Ci-r6m">
-                                    <rect key="frame" x="0.0" y="44" width="375" height="36"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="口味" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kYX-jj-InF">
-                                            <rect key="frame" x="15" y="11" width="25" height="14.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="原味，香辣味，香辣鸡味" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5is-XT-cBn">
-                                            <rect key="frame" x="62" y="11" width="135" height="14.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstItem="5is-XT-cBn" firstAttribute="leading" secondItem="kYX-jj-InF" secondAttribute="trailing" constant="22" id="5wh-PT-y29"/>
-                                        <constraint firstItem="kYX-jj-InF" firstAttribute="centerY" secondItem="VK1-Ci-r6m" secondAttribute="centerY" id="7KQ-bu-XuU"/>
-                                        <constraint firstAttribute="height" constant="36" id="NaA-rX-bVs"/>
-                                        <constraint firstItem="5is-XT-cBn" firstAttribute="centerY" secondItem="VK1-Ci-r6m" secondAttribute="centerY" id="UIJ-VL-p9s"/>
-                                        <constraint firstItem="kYX-jj-InF" firstAttribute="leading" secondItem="VK1-Ci-r6m" secondAttribute="leading" constant="15" id="s27-hJ-kmJ"/>
-                                    </constraints>
-                                </view>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="VK1-Ci-r6m" secondAttribute="trailing" id="7qO-pl-YbQ"/>
                                 <constraint firstAttribute="height" constant="80" id="9ju-u2-sow"/>
                                 <constraint firstItem="0Qx-NJ-mhz" firstAttribute="leading" secondItem="sae-Mm-CBD" secondAttribute="leading" id="DWK-AB-ICO"/>
-                                <constraint firstItem="VK1-Ci-r6m" firstAttribute="leading" secondItem="sae-Mm-CBD" secondAttribute="leading" id="LfH-2i-Kgz"/>
-                                <constraint firstAttribute="bottom" secondItem="VK1-Ci-r6m" secondAttribute="bottom" id="Rab-nP-enG"/>
                                 <constraint firstAttribute="trailing" secondItem="0Qx-NJ-mhz" secondAttribute="trailing" id="Vjq-Vq-ybB"/>
                                 <constraint firstItem="0Qx-NJ-mhz" firstAttribute="top" secondItem="sae-Mm-CBD" secondAttribute="top" id="rZx-Yd-1vM"/>
                             </constraints>
@@ -288,7 +270,7 @@
                 <constraint firstItem="LYW-gH-4gK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Vs4-hQ-MdS"/>
                 <constraint firstItem="sML-AC-IE7" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="c1q-Qt-CW3"/>
             </constraints>
-            <point key="canvasLocation" x="34.5" y="161.5"/>
+            <point key="canvasLocation" x="158" y="165"/>
         </view>
     </objects>
 </document>
