--- a/DiYa/DiYa/Class/Mine/Controller/WYMineViewController.xib
+++ b/DiYa/DiYa/Class/Mine/Controller/WYMineViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,6 +14,7 @@
             <connections>
                 <outlet property="headerImageVIew" destination="yij-y1-AuL" id="7UN-OI-V9O"/>
                 <outlet property="nameLabel" destination="EBI-5v-QI0" id="eEe-nu-bSV"/>
+                <outlet property="scrollViewWidth" destination="XPN-Wa-G5f" id="XSN-OG-Yzj"/>
                 <outlet property="signLabel" destination="7Oj-Xr-hox" id="rf0-Vx-6aV"/>
                 <outlet property="view" destination="AKt-1o-hBs" id="yP9-QK-hP8"/>
             </connections>
@@ -448,6 +449,7 @@
                         <constraint firstItem="H9D-9U-dw2" firstAttribute="top" secondItem="yeb-xQ-YIv" secondAttribute="bottom" id="drL-qS-KBj"/>
                         <constraint firstItem="H9D-9U-dw2" firstAttribute="leading" secondItem="6jw-SE-Aue" secondAttribute="leading" id="fdl-f0-u4j"/>
                         <constraint firstAttribute="trailing" secondItem="lQu-XE-tw9" secondAttribute="trailing" id="gHl-e1-2Fc"/>
+                        <constraint firstAttribute="width" constant="375" id="jJF-bX-6Tv"/>
                         <constraint firstItem="pDa-Jb-p5g" firstAttribute="leading" secondItem="6jw-SE-Aue" secondAttribute="leading" id="mxC-kx-Av0"/>
                         <constraint firstAttribute="trailing" secondItem="rQk-oo-zwk" secondAttribute="trailing" id="qxw-BN-F1P"/>
                         <constraint firstItem="jLU-xJ-WHQ" firstAttribute="top" secondItem="UXb-Qe-gZT" secondAttribute="bottom" id="r8i-xG-jwT"/>
@@ -465,7 +467,7 @@
                 <constraint firstAttribute="bottom" secondItem="6jw-SE-Aue" secondAttribute="bottom" id="UeW-Je-Fdj"/>
                 <constraint firstItem="6jw-SE-Aue" firstAttribute="leading" secondItem="AKt-1o-hBs" secondAttribute="leading" id="lLr-Up-JzP"/>
             </constraints>
-            <point key="canvasLocation" x="52.5" y="117.5"/>
+            <point key="canvasLocation" x="-73" y="-75"/>
         </view>
     </objects>
     <resources>
